2007-02-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/ballcatch.py: Changed by Jose Jorge to have 4
	different backgrounds. Bruno fixed a timer issue that was not deleted.
	clicking on next and exiting this activity was crashing it.

	* src/gcompris/gcompris.c: (main): Moved back local apply after the property
	is loaded.

2007-02-21  Bruno coudoin  <bruno.coudoin@free.fr>

	- Reworked the log API. Now the logs are saved within our sqlite
	  database. Added a minimal module in the admin to display the log.

	* src/boards/advanced_colors.c: (game_won), (ok_timeout):
	* src/boards/algebra.c: (pause_board), (timer_end), (game_won):
	* src/boards/algebra_guesscount.c: (game_won), (process_time):
	* src/boards/awele.c: (game_won), (to_computer),
	(updateCapturedBeans):
	* src/boards/canal_lock.c: (game_won), (item_event):
	* src/boards/chess.c: (chess_create_item), (game_won),
	(move_piece_to), (get_square_from_coord), (item_event):
	* src/boards/click_on_letter.c: (game_won), (process_ok_timeout):
	* src/boards/clickgame.c: (fish_gobble), (game_won):
	* src/boards/clockgame.c: (game_won), (process_ok):
	* src/boards/colors.c: (game_won), (process_ok_timeout):
	* src/boards/crane.c: (bonus), (finished):
	* src/boards/enumerate.c: (game_won), (process_ok):
	* src/boards/erase.c: (bonus), (finished):
	* src/boards/fifteen.c: (game_won), (test_win):
	* src/boards/gletters.c: (player_win):
	* src/boards/gtans_callbacks.c:
	(on_wdrawareagrande_button_release_event):
	* src/boards/hanoi.c: (game_won), (item_event):
	* src/boards/hanoi_real.c: (game_won), (item_event):
	* src/boards/imageid.c: (game_won), (process_ok_timeout):
	* src/boards/leftright.c: (game_won), (process_ok_timeout):
	* src/boards/machpuzzle.c: (game_won), (minigolf_move):
	* src/boards/magic_hat.c: (process_ok), (finished):
	* src/boards/maze.c: (game_won):
	* src/boards/memory.c: (player_win):
	* src/boards/missingletter.c: (game_won), (process_ok_timeout):