@@ -1,5 +1,13 @@
 2007-02-21  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	Added missing files to the administration report module.
+
+	* src/boards/python/admin/log_list.py:
+	* src/boards/python/admin/module_reports.py:
+	* boards/skins/gartoon/config_reports.png:
+
+2007-02-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	* src/boards/python/ballcatch.py: Changed by Jose Jorge to have 4
 	different backgrounds. Bruno fixed a timer issue that was not deleted.
 	clicking on next and exiting this activity was crashing it.
